docs: configuração de documentação do swagger